# baseball-pitch-model

./: .gitignore  README.md  WRITEUP.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: README.md  artifacts.md  dataset.md  models.md  profiling.md  reporting.md  serving.md  setup.md  simulation.md  visuals.md  workflows-greene.md  writeup.md
docs/examples/: replay_game716494_ab17.jsonl  replay_game716494_example.html
scripts/greene/: README.md  bootstrap_venv.sh  download_prepare_cpu.sbatch  eval_cpu.sbatch  final_mdn_mt_rtx8000.sbatch  final_rtx8000.sbatch  final_state_mt_rtx8000.sbatch  final_state_mt_rtx8000_robust.sbatch  final_state_mt_v100_robust.sbatch  final_state_rtx8000.sbatch  profile_rtx8000.sbatch  report_rtx8000.sbatch  serve_cpu.sbatch  simulate_state_rtx8000.sbatch  smoke_mdn_mt_rtx8000.sbatch  smoke_state_mt_rtx8000.sbatch  sweep_rtx8000.sbatch  sweep_v100.sbatch  train_a100.sbatch  train_cpu.sbatch  train_rtx8000.sbatch  train_state_rtx8000.sbatch  train_state_v100.sbatch  train_v100.sbatch
src/baseball/: __main__.py  config.py  logging.py  profile.py  report.py  simulate.py  trace.py  viz.py
src/baseball/cli/: common.py  download.py  eval.py  export.py  prepare.py  profile.py  report.py  serve.py  simulate.py  trace.py  train.py  viz.py
src/baseball/data/: download.py  prepare.py  raw_schema.py  vocab.py
src/baseball/serve/: api.py  bundle.py
src/baseball/training/: dataset.py  eval.py  export.py  io.py  mdn.py  models.py  runs.py  train.py  (+1 more)
tests/: test_profile_keys.py  test_simulate_clamp.py
